[package]
name = "rscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.23.0"
default-features = false
features = ["rt-multi-thread", "macros", "net", "io-util", "time"]

[dependencies.reqwest]
version = "0.11.13"
default-features = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
